# rompy-roms

./: .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  mkdocs.yml  pyproject.toml  tbump.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-docs.yml  python-publish.yml
docs/: Makefile  authors.md  conf.py  contributing.md  history.md  index.md  index.rst  installation.md  installation.rst  make.bat  usage.md  usage.rst
docs/reference/: config.md
src/rompy_roms/: __init__.py  cli.py  config.py  data.py  grid.py  source.py
src/rompy_roms/templates/base/{{runtime.run_id}}/: namelist
tests/: __init__.py  test_config.py  test_rompy_roms.py
