[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
  "rompy",
  "typer",
]
name = "rompy_roms"
description = "Rompy ROMS Config package."
readme = "README.rst"
authors = [
    { name = "Rompy Developers", email = "developers@rompy.com" },
]
maintainers = [
    { name = "Rompy Developers", email = "developers@rompy.com" },
]
classifiers = []
license = { text = "BSD license" }

dynamic = ["version"]

[project.optional-dependencies]
dev = ["coverage", "mypy", "pytest", "ruff", "requests"]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pymdown-extensions",
]
[project.scripts]
rompy_roms = "rompy_roms.cli:app"

[project.entry-points."rompy.config"]
roms = "rompy_roms.config:Config"

[project.entry-points."rompy.source"]
# Register here any new source. For example:
# roms_source_type = "rompy_roms.source:ROMSSource"

[project.urls]
bugs = "https://github.com/rom-py/rompy_roms/issues"
changelog = "https://github.com/rom-py/rompy_roms/blob/master/changelog.md"
homepage = "https://github.com/rom-py/rompy_roms"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.setuptools.dynamic]
version = { attr = "rompy_roms.__version__" }

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
